re PR rtl-optimization/9768 ([HP-PA] ICE when optimizing inline code at -O2)

PR optimization/9768
	Backport patch from mainline:

	2002-03-21  DJ Delorie  <dj@redhat.com>

	* bb-reorder.c (make_reorder_chain_1): Protect against
	when redundant edges are omitted.
	* predict.c (dump_prediction): Likewise.

Co-Authored-By: Eric Botcazou <ebotcazou@libertysurf.fr>

From-SVN: r63180